# gci

./: .gitignore  README.md  pyproject.toml
app/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  signals.py  urls.py  views.py
app/accounts/templates/accounts/: page.html
app/accounts/templates/accounts/includes/: login.html  profile_update.html  signup.html
app/accounts/templates/accounts/stylesheet/: style.html
app/blog/: admin.py  apps.py  context_processors.py  forms.py  models.py  views.py
app/blog/static/blog/: page.css
app/blog/templates/blog/: blogpage.html
app/blog/templates/blog/includes/: details.html  list.html
app/home/: admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
app/home/fixtures/: seed_example.json
app/home/management/commands/: seed.py
app/home/static/home/: global.css  global.js
app/home/static/home/init/: drift.js  glightbox.js  swiper.js
app/home/templates/home/: layout.html  page.html  robots.txt
app/home/templates/home/sections/: about.html  call-to-action.html  contact.html  footer.html  header.html  hero.html  lists.html
app/home/templates/home/widgets/: back-to-top.html  whatsapp-call-us.html
conf/: asgi.py  settings.py  urls.py  wsgi.py
